Day 7 - small refactor